--- a/src/styles/Mission.module.css
+++ b/src/styles/Mission.module.css
@@ -1,6 +1,198 @@
-.container{
-    position: relative;
-    width:100vw;
-    height:1311px;
-    background-color: #000000;
+.container {
+  position: relative;
+  width: 100vw;
+  height: 1311px;
+  background-color: #000000;
+}
+.B_image {
+  position: absolute;
+  width: 1682.587px;
+  height: 1051.549px;
+  top: 99.74px;
+  border: 1px;
+  color: #ff9800;
+}
+.B_image2 {
+  position: absolute;
+  width: 612.02px;
+  height: 337.27px;
+  top: 367.42px;
+  left: 1360.27px;
+  opacity: 75%;
+}
+.frame {
+  position: relative;
+  display: flex;
+  width: 1129px;
+  height: 416px;
+  top: 149px;
+  left: 395.5px;
+  gap: 117px;
+  /* background-color: #000000; */
+}
+.F_mission {
+  display: flex;
+  width: 506px;
+  padding: 43.965px 33.666px 56.088px 33.666px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16.035px;
+  border-radius: 26px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 12px 44px 0px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(3px);
+  background-color: #0000001a;
+}
+.OurMission {
+  width: 438.67px;
+  height: 60px;
+  top: 43.96px;
+  left: 33.67px;
+  font-family: Red Hat Display;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+}
+.Cement {
+  width: 294.476px;
+  height: 239.912px;
+  top: 120px;
+  left: 105.76px;
+  font-family: Red Hat Display;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 33px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #cccccc;
+}
+.F_Promise {
+  display: flex;
+  width: 506px;
+  padding: 43.965px 33.666px 56.088px 33.666px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16.035px;
+  border-radius: 26px;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 12px 44px 0px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(3px);
+  background-color: #0000001a;
+}
+.OurPromise {
+  width: 438px;
+  height: 60px;
+  top: 43.96px;
+  left: 33.67px;
+  font-family: Red Hat Display;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+}
+.Studio {
+  width: 324px;
+  height: 239.91px;
+  top: 120px;
+  left: 91px;
+  font-family: Red Hat Display;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 33px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #cccccc;
+}
+.topRec {
+  position: relative;
+  width: 1142px;
+  height: 22.813px;
+  background-color: #fff;
+  flex-shrink: 0px;
+  border-radius: 26px 26px 0px 0px;
+}
+.Card {
+  position: absolute;
+  width: 1142px;
+  height: 397px;
+  text-align: center;
+  border-radius: 56px;
+  background: #21213d;
+  box-shadow: 2px 12px 42px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(3px);
+  top: 734px;
+  left: 25%;
+  border-radius: 26px;
+  transform: translateX(-10%);
+}
+.Work {
+  position: absolute;
+  width: 624.65px;
+  height: 60px;
+  top: 83.78px;
+  display: flex;
+  left: 8%;
+  font-family: Red Hat Display;
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.Vision {
+  position: absolute;
+  width: 510.728px;
+  height: 44.614px;
+  display: flex;
+  /* flex-direction: row; */
+  flex-shrink: 0;
+  left: 9%;
+  top: 153.89px;
+  color: #ccc;
+  font-family: Red Hat Display;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px; /* 150% */
+}
+.btn {
+  position: absolute;
+  width: 379px;
+  height: 86px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 225px;
+  left: 99.26px;
+  border-radius: 53px;
+  border: 1px;
+  padding: 23px, 63px, 23px, 63px;
+  gap: 10px;
+  background-color: #ffffff;
+  color: #000;
+  text-align: center;
+  font-family: Red Hat Display;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 181.818% */
+}
+.email{
+  position: absolute;
+  width:453px;
+  height:281px;
+  top:96px;
+  /* left:678px; */
+  right:2%;
+  display: flex;
+  padding-right: 0px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
